samples/_failures_safe/1761409996_1c656d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de12a40b.c: In function ‘main’:
./samples/SAFE/__tmp_de12a40b.c:169:5: error: expected expression at end of input
  169 |     if (scanf("%d",
      |     ^~
./samples/SAFE/__tmp_de12a40b.c:169:5: error: expected declaration or statement at end of input
